# falcon-routine

./: CMakeLists.txt  Makefile  README.md  docker-compose.test.yml  vcpkg.json
.github/workflows/: ci.yml
cmake/: falcon-routine-config.cmake.in
include/falcon-routine/: database.hpp  export.h  hub.hpp  log.hpp  math.hpp
ports/falcon-comms/: portfile.cmake  vcpkg.json
ports/falcon-core/: portfile.cmake  vcpkg.json
ports/falcon-database/: portfile.cmake  vcpkg.json
src/: hub.cpp  log.cpp  math.cpp
tests/: CMakeLists.txt
tests/integration/: test_full_workflow.cpp
tests/test_utils/: TestFixture.hpp
tests/unit/: test_database.cpp  test_log.cpp  test_math.cpp
